# Chatbot

./: Dockerfile  README.md  bot.py  pyproject.toml
src/plugins/chatgpt/: chatgpt.py
src/plugins/cqhttp/: __init__.py  config.yml
