[tool.poetry]
name = "ATRI"
version = "0.1.0"
description = "ATRI"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.3"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"
playwright = "^1.31.1"
nonebot_plugin_apscheduler = "^0.2.0"
nonebot_plugin_status= "^0.6.1"
nonebot_plugin_htmlrender = "^0.2.0.3"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
